--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,22 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#BEAF87" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Real state douro 39 project"
+    />
+    <meta
+      name="keywords"
+      content="Douro, 39, realstate, housing, luxury, apartment, porto"
+    />
+    <meta
+      name="author"
+      content="Eduardo Marinho"
+    />
+    <meta
+      name="application-name"
+      content="Douro 39"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -27,7 +39,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Douro 39</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
