--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#BEAF87" />
-  <meta name="description" content="Real state douro 39 project" />
-  <meta name="keywords" content="Douro, 39, realstate, housing, luxury, apartment, porto" />
+  <meta name="description" content="Real estate douro 39 luxury apartments in Porto" />
+  <meta name="keywords" content="Douro, 39, realestate, housing, luxury, apartment, porto" />
   <meta name="author" content="Eduardo Marinho" />
   <meta name="application-name" content="Douro 39" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
