remove pixel tracking until cookie policy fix

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Douro 39</title>
+
   <!-- Meta Pixel Code -->
-  <script>
+  <!-- <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
     n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -45,7 +46,7 @@
     </script>
     <noscript><img height="1" width="1" style="display:none"
     src="https://www.facebook.com/tr?id=841669380876890&ev=PageView&noscript=1"
-    /></noscript>
+    /></noscript> -->
     <!-- End Meta Pixel Code -->
 </head>
 
