--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   <title>Douro 39</title>
 
   <!-- Meta Pixel Code -->
-  <!-- <script>
+  <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
     n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -43,11 +43,12 @@
     'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '841669380876890');
     fbq('track', 'PageView');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=841669380876890&ev=PageView&noscript=1"
-    /></noscript> -->
-    <!-- End Meta Pixel Code -->
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=841669380876890&ev=PageView&noscript=1"
+  /></noscript>
+  <!-- Meta Pixel Code -->
+
 </head>
 
 <body>
